<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_detail"
            android:layout_width="200dp"
            android:layout_height="300dp"
            tools:src="@color/teal_dark"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:contentDescription="@string/title"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_detail"
            android:orientation="vertical"
            android:padding="4dp">

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textStyle="bold"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="4dp"
                android:textSize="24sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time_release"
                android:textStyle="bold"
                android:layout_marginStart="4dp"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txt_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/time_date"
                android:layout_marginStart="4dp"
                android:textSize="12sp"
                android:layout_marginBottom="4dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/genre"
                android:textStyle="bold"
                android:layout_marginStart="4dp"/>

            <TextView
                android:id="@+id/txt_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/genre_example"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="4dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/director"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_director"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/director_example"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="4dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:textStyle="bold"
                android:layout_marginStart="4dp" />

            <TextView
                android:id="@+id/txt_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/score_example"
                android:layout_marginStart="4dp"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginStart="16dp"
        android:text="@string/description"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/txt_desc"
        android:layout_width="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_height="wrap_content"
        tools:text="@string/desc_example"
        android:textSize="14sp"/>

</LinearLayout>